# ChannelManager

./: .example.env  .gitignore  README.md  pyproject.toml  todo.md
src/: config.py  main.py
src/bots/routes/: base.py  group.py  tasks.py
src/bots/states/: state.py
src/bots/utils/: AlbumMiddleware.py
src/core/: api.py  celery.py
src/core/parser/: Parser.py
src/core/tasks/: AsyncWorker.py  Worker.py  schedule.py  tasks.py
src/core/translator/: Translator.py
src/database/: models.py
src/database/cruds/: CommonCrud.py  GroupCrud.py  ParserCrud.py  TaskCrud.py  UserCrud.py
src/migrations/: env.py
src/migrations/versions/: 3602a3e61783_change_datetime.py  41f25517d8f5_recreate.py  bd2c299a21eb_delete_datetime.py  bfbf53dc0b61_init_migration.py
src/schemas/: Post.py  SheduledPost.py
src/utils/: utils.py
tests/: test.py
