[project]
name = "tgchannelsbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.17.0",
    "aioredis>=2.0.1",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "logging>=0.4.9.6",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
    "uvloop>=0.21.0",
]
